pub/ops/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: pub-0
  name: pub-0
spec:
  ports:
  - port: 3000
    targetPort: pub-0-http
  selector:
    app: pub-0
  sessionAffinity: None
  type: ClusterIP
