pub/ops/k8s/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pub-0
spec:
  tls:
  - hosts:
    - pub-0.workshop.shipit.solutions
    secretName: pub-0-tls
  rules:
    - host: pub-0.workshop.shipit.solutions
      http:
        paths:
          - backend:
              serviceName: pub-0
              servicePort: 3000
